--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ pandas>=1.3
 matplotlib>=3.4
 statsmodels>=0.13
 -e git+https://git@github.com/leoTiez/seqDataHandler.git@v1.3.4#egg=seqDataHandler
+scikit-learn>=0.24
