Update: replace own reader wrapper w/ official lib
install official libs instead of own wrapper package

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ numpy>=1.21
 pandas>=1.3
 matplotlib>=3.4
 statsmodels>=0.13.2
--e git+https://git@github.com/leoTiez/seqDataHandler.git@v1.3.4#egg=seqDataHandler
 scikit-learn>=0.24
 seaborn>=0.11
 dcor>=0.5
+pyBigWig>=0.3
+biopython>=1.79
